# vand_2025_test

./: .gitignore  README.md  results.csv  script.js
.github/workflows/: evaluate.yaml
.platform/: DOCKERFILE  README.md  create.sh  docker-compose.yaml
.platform/merge/: pyproject.toml
.platform/merge/src/merge/: main.py
.platform/static/: script.js
eval/: pyproject.toml
eval/src/eval/: evaluate.py
